--- a/JiaoBaoYun-hb/html/cloud/record_learningpath_main.html
+++ b/JiaoBaoYun-hb/html/cloud/record_learningpath_main.html
@@ -36,7 +36,7 @@
 				id: 'record_learningpath_sub.html',
 				styles: {
 					top: '45px',
-					bottom: '0px',
+					bottom:  localStorage.getItem('$Statusbar'),
 				}
 			}]
 		});
