--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -61,7 +61,7 @@
 				id: 'storage_sub.html',
 				styles: {
 					top: '90px',
-					bottom: '0px',
+					bottom: localStorage.getItem('$Statusbar'),
 				}
 			}]
 		});
