--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -67,6 +67,7 @@
 						console.log('更改后信息:'+JSON.stringify(pInfo));
 						mui.fire(curpage.opener(),'infoChanged');
 						events.fireToPageNone('mine.html','infoChanged');
+						events.fireToPageNone('classSpace-sub.html','infoChanged');
 						mui.back()
 					}else{
 						mui.toast(data.RspTxt);
