--- a/JiaoBaoYun-hb/html/quan/group-pInfo.html
+++ b/JiaoBaoYun-hb/html/quan/group-pInfo.html
@@ -12,40 +12,41 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">详细资料</h1>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">详细资料</h1>
 		</header>
 		<div class="mui-content">
-		    <div class="info-main">
-		    	<img id="info-headImg" src="../../image/utils/default_personalimage.png" class="info-headImg"/>
-		    	<div class="info-briefIntro">
-		    		<h5 id="info-name" class="info-name">个人姓名</h5>
-		    		<p  id="info-nick" class="info-nick">个人昵称</p>
-		    	</div>
-		    </div>
-		    <ul class="mui-table-view">
-		            <li id="person-gData" class="mui-table-view-cell">
-		                <a class="mui-navigate-right">
-		                    資料信息
-		                </a>
-		                
-		            </li>
-		            <li id="personal-space" class="mui-table-view-cell">
-		                <a class="mui-navigate-right">
-		                    空间
-		                </a>
-		            </li>
-		            <li class="mui-table-view-cell">
-		                <a class="mui-navigate-right">
-		                  修改备注
-		                </a>
-		            </li>
-		             <li class="mui-table-view-cell">
-		                <a class="mui-navigate-right">
-		                  设置家校圈权限
-		                </a>
-		            </li>
-		        </ul>
+			<div class="info-main">
+				<img id="info-headImg" src="../../image/utils/default_personalimage.png" class="info-headImg" />
+				<div class="info-briefIntro">
+					<h5 id="info-name" class="info-name">个人姓名</h5>
+					<p id="info-nick" class="info-nick">个人昵称</p>
+				</div>
+			</div>
+			<ul class="mui-table-view">
+				<li id="person-gData" class="mui-table-view-cell">
+					<a class="mui-navigate-right">
+						資料信息
+						<span id="" class="mui-badge">数字</span>
+					</a>
+
+				</li>
+				<li id="personal-space" class="mui-table-view-cell">
+					<a class="mui-navigate-right">
+						空间
+						<span id="" class="mui-badge">数字</span> </a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a class="mui-navigate-right">
+						修改备注
+					</a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a class="mui-navigate-right">
+						设置家校圈权限
+					</a>
+				</li>
+			</ul>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
