--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -114,8 +114,8 @@
 				<!--标题栏-->
 				<h4>
 					<!--家长圈标题左边的图片-->
-					<img style="height: 30px;"  src="../../image/tab_zone/u127.png" / >
-					<span  class="parent">家长圈</span>
+					<img id="leftImg" style="height: 30px;"  src="../../image/tab_zone/u127.png" / >
+					<span id="parent"  class="parent">家长圈</span>
 					<!--群组-->
 					<div style="padding-left: 90px;padding-bottom: 20px; margin-top: -35px;">
 				<div  class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-primary">
