--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -75,8 +75,8 @@
 	</head>
 
 	<body>
-		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
-			<div class="mui-scroll">
+		<div class="mui-content">
+			
 				<!--第一个列表-->
 				<ul id="top-list" class="mui-table-view ">
 					<!--学生动态入口start-->
@@ -126,6 +126,7 @@
 			</div>
 				</h4>
 				<!--第二个列表-->
+				<div class="mui-scroll">
 				<div id="userList" style="margin-top: -20px;">
 					<!--<div id="item1" class="mui-control-content mui-active">
 
