群成员信息显示备注

--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -38,6 +38,7 @@
 				setContents(curPage.data,title,inText,pInfo)
 				var save=document.getElementById('save');
 				save.addEventListener('tap',function(){
+					console.log('save is clicked');
 					postInfo(curPage.data,inText,pInfo,curPage);
 				})
 			})
