--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -250,58 +250,8 @@
 				//-------------------------
 
 				//---获取群数据---start---
-				getQunMem(); //获取群
-				//				//9.获取用户群
-				//				//获取个人信息
-				//				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-				//				//需要参数
-				//				var getQunData = {
-				//					vtp: 'cg', //要获取的项:cg(创建的群),ug(参与群),mg(协管的群),ag(所有的群)
-				//					vvl: personalUTID, //查询的各项，对应人的utid，可以是查询的任何人
-				//				};
-				//				// 等待的对话框
-				//				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-				//				postDataPro_PostGList(getQunData, wd, function(data) {
-				//					console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-				//					if(data.RspCode == 0) {
-				//						//获取到数据
-				//						console.log('获取群数据成功');
-				//						document.getElementById("noqun").style.display = 'none';
-				//						document.getElementById("linewhite").style.display = 'inline';
-				//						document.getElementById("lineblue").style.display = 'inline';
-				//						document.body.querySelector('.mui-slider').style.display = 'inline';
-				//						//参数名	名称	参数类型	长度	是否加密	备注
-				//						//gid	群ID	int		否
-				//						//gname	群名	string		否	群名称
-				//						//gimg	群头像	string		否	群头像的链接
-				//						//mstype	用户管理角色	int		否	0家长,1管理员,2老师,3学生
-				//						mui.each(data.RspData, function(index, item) {
-				//							console.log('data.RspData:' + item.gname);
-				//							var qun = {
-				//								gid: item.gid,
-				//								gname: item.gname,
-				//								gimg: item.gimg,
-				//								mstype: item.mstype
-				//							}
-				//							var hasGetMember = {
-				//								hasGetMem: false //记录是否已获得群成员
-				//							};
-				//							mui.extend(qun, hasGetMember); //合并两个对象
-				//							qunList.push(qun);
-				//							addQun(qun);
-				//						});
-				//						getMember(qunList[0].gid); //通过群ID获取群的正常用户
-				//					} else {
-				//						mui.toast(data.RspTxt);
-				//						//未获取到数据
-				//						document.getElementById("noqun").style.display = 'inline';
-				//						document.getElementById("noqun").style.textAlign = "center";
-				//						document.getElementById("linewhite").style.display = 'none';
-				//						document.getElementById("lineblue").style.display = 'none';
-				//						document.body.querySelector('.mui-slider').style.display = 'none';
-				//					}
-				//					wd.close();
-				//				});
+				getQunMemCG(); //获取群
+
 				//---获取群数据---end---
 
 				//---创建群popover---start---
@@ -387,6 +337,7 @@
 					//						item.style.display = 'none';
 					//					});
 					document.getElementById('bot_' + show).style.display = 'none';
+					console.log('show:' + show);
 					console.log('qun:' + this.getAttribute('data-value'));
 					document.getElementById("bot_" + this.getAttribute('data-value')).style.display = 'inline';
 					show = this.getAttribute('data-value');
@@ -510,7 +461,7 @@
 				/**
 				 * 获取创建的群和协管的群
 				 */
-				function getQunMem() {
+				function getQunMemCG() {
 					//9.获取用户群
 					//获取个人信息
 					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
@@ -523,7 +474,7 @@
 					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 					//获取创建的群
 					postDataPro_PostGList(cgQunData, wd, function(data) {
-						console.log('获取创建的群90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						console.log('9_PostGList_获取创建的群.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
 							//获取到数据
 							//console.log('获取群数据成功');
@@ -537,7 +488,7 @@
 							//gimg	群头像	string		否	群头像的链接
 							//mstype	用户管理角色	int		否	0家长,1管理员,2老师,3学生
 							mui.each(data.RspData, function(index, item) {
-								console.log('data.RspData:' + item.gname);
+								//console.log('data.RspData:' + item.gname);
 								var qun = {
 									gid: item.gid,
 									gname: item.gname,
@@ -549,42 +500,52 @@
 								};
 								mui.extend(qun, hasGetMember); //合并两个对象
 								qunList.push(qun);
-								//addQun(qun);
 							});
-							//getMember(qunList[0].gid); //通过群ID获取群的正常用户
+							getQunMemMG(); //获取协管的群
+						} else if(data.RspCode == 9) { //为空
+							getQunMemMG(); //获取协管的群
 						} else {
-							//mui.toast(data.RspTxt);
-							//未获取到数据
-							//document.getElementById("noqun").style.display = 'inline';
-							//document.getElementById("noqun").style.textAlign = "center";
-							//document.getElementById("linewhite").style.display = 'none';
-							//document.getElementById("lineblue").style.display = 'none';
-							//document.body.querySelector('.mui-slider').style.display = 'none';
+							mui.toast(data.RspTxt);
 						}
 						wd.close();
+					});
+				}
 
-						//获取协管的群
-						var mgQunData = {
-							vtp: 'mg', //要获取的项:cg(创建的群),ug(参与群),mg(协管的群),ag(所有的群)
-							vvl: personalUTID, //查询的各项，对应人的utid，可以是查询的任何人
-						};
-						// 等待的对话框
-						var wd2 = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-						postDataPro_PostGList(mgQunData, wd2, function(data2) {
-							console.log('获取协管的群90909090success:RspCode:' + data2.RspCode + ',RspData:' + JSON.stringify(data2.RspData) + ',RspTxt:' + data2.RspTxt);
-							if(data2.RspCode == 0) {
-								//获取到数据
-								//console.log('获取群数据成功');
-								//document.getElementById("noqun").style.display = 'none';
-								//document.getElementById("linewhite").style.display = 'inline';
-								//document.getElementById("lineblue").style.display = 'inline';
-								//document.body.querySelector('.mui-slider').style.display = 'inline';
-								//参数名	名称	参数类型	长度	是否加密	备注
-								//gid	群ID	int		否
-								//gname	群名	string		否	群名称
-								//gimg	群头像	string		否	群头像的链接
-								//mstype	用户管理角色	int		否	0家长,1管理员,2老师,3学生
-								mui.each(data2.RspData, function(index, item) {
+				/**
+				 * 获取协管的群
+				 */
+				function getQunMemMG() {
+					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+					var mgQunData = {
+						vtp: 'mg', //要获取的项:cg(创建的群),ug(参与群),mg(协管的群),ag(所有的群)
+						vvl: personalUTID, //查询的各项，对应人的utid，可以是查询的任何人
+					};
+					// 等待的对话框
+					var wd2 = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					postDataPro_PostGList(mgQunData, wd2, function(data2) {
+						console.log('9_PostGList_获取协管的群.90909090success:RspCode:' + data2.RspCode + ',RspData:' + JSON.stringify(data2.RspData) + ',RspTxt:' + data2.RspTxt);
+						if(data2.RspCode == 0) {
+							//获取到数据
+							//console.log('获取群数据成功');
+							//document.getElementById("noqun").style.display = 'none';
+							//document.getElementById("linewhite").style.display = 'inline';
+							//document.getElementById("lineblue").style.display = 'inline';
+							//document.body.querySelector('.mui-slider').style.display = 'inline';
+							//参数名	名称	参数类型	长度	是否加密	备注
+							//gid	群ID	int		否
+							//gname	群名	string		否	群名称
+							//gimg	群头像	string		否	群头像的链接
+							//mstype	用户管理角色	int		否	0家长,1管理员,2老师,3学生
+							mui.each(data2.RspData, function(index, item) {
+								//剔除同一个群身份不同
+								var same = false;
+								mui.each(qunList, function(index, qitem) {
+									if(qitem.gid == item.gid) {
+										same = true;
+										return false;
+									}
+								});
+								if(!same) {
 									console.log('data.RspData:' + item.gname);
 									var qun = {
 										gid: item.gid,
@@ -597,41 +558,35 @@
 									};
 									mui.extend(qun, hasGetMember); //合并两个对象
 									qunList.push(qun);
-									//addQun(qun);
-								});
-								//getMember(qunList[0].gid); //通过群ID获取群的正常用户
-							} else {
-								//mui.toast(data.RspTxt);
-								//未获取到数据
-								//document.getElementById("noqun").style.display = 'inline';
-								//document.getElementById("noqun").style.textAlign = "center";
-								//document.getElementById("linewhite").style.display = 'none';
-								//document.getElementById("lineblue").style.display = 'none';
-								//document.body.querySelector('.mui-slider').style.display = 'none';
+								}
+
+							});
+						} else {
+							if(data.RspCode != 9) {
+								mui.toast(data.RspTxt);
 							}
-							if(qunList.length == 0) {
-								//未获取到数据
-								mui.toast('没有管理的群');
-								//document.getElementById("noqun").style.display = 'inline';
-								//document.getElementById("noqun").style.textAlign = "center";
-								document.getElementById("linewhite").style.display = 'none';
-								document.getElementById("lineblue").style.display = 'none';
-								document.body.querySelector('.mui-slider').style.display = 'none';
-							} else {
-								//获取到数据
-								console.log('获取群数据成功');
-								//document.getElementById("noqun").style.display = 'none';
-								document.getElementById("linewhite").style.display = 'inline';
-								document.getElementById("lineblue").style.display = 'inline';
-								document.body.querySelector('.mui-slider').style.display = 'inline';
-								mui.each(qunList, function(index, item) {
-									console.log('qunList:' + JSON.stringify(item));
-									addQun(item);
-								});
-								getMember(qunList[0].gid); //通过群ID获取群的正常用户
-							}
-							wd2.close();
-						});
+						}
+						if(qunList.length == 0) {
+							//未获取到数据
+							mui.toast('没有管理的群');
+							//document.getElementById("noqun").style.display = 'inline';
+							//document.getElementById("noqun").style.textAlign = "center";
+							document.getElementById("linewhite").style.display = 'none';
+							document.getElementById("lineblue").style.display = 'none';
+							document.body.querySelector('.mui-slider').style.display = 'none';
+						} else {
+							//获取到数据
+							//document.getElementById("noqun").style.display = 'none';
+							document.getElementById("linewhite").style.display = 'inline';
+							document.getElementById("lineblue").style.display = 'inline';
+							document.body.querySelector('.mui-slider').style.display = 'inline';
+							mui.each(qunList, function(index, item) {
+								console.log('qunList:' + JSON.stringify(item));
+								addQun(item);
+							});
+							getMember(qunList[0].gid); //通过群ID获取群的正常用户
+						}
+						wd2.close();
 					});
 				}
 
@@ -714,6 +669,7 @@
 					var html4 = '<p class="mui-ellipsis">' + member.stuname + '</p></div>';
 					li.innerHTML = html1 + html2 + html3 + html4;
 					qunBot.insertBefore(li, addTable);
+					console.log('addMember|member:' + JSON.stringify(member));
 				}
 
 				/**
@@ -724,23 +680,23 @@
 					//16.通过群ID获取群对象资料
 					//所需参数
 					var getMemData = {
+						vtp: '0', //获取类型,0普通资料获取,1邀请排除(主老师用)
 						top: '-1', //选择条数,-1为全部
 						vvl: qunId, //群ID,查询的值
 						vvl1: '3' //类型,0家长,1管理员,2老师,3学生,-1全部
 					};
 					//返回值model：model_groupStus
+					//	mod.model_groupStus = {
+					//		gid:'',//群ID
+					//		stuid:'',//资料id
+					//		stuname:'',//名称
+					//		stuimg:'',//头像,头像地址
+					//		mstype:''//资料类型,0家长,1管理员,2老师,3学生
+					//	}
 					// 等待的对话框
 					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 					postDataPro_PostGUInf(getMemData, wd, function(data) {
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-						//16.通过群ID获取群对象资料
-						//	mod.model_groupStus = {
-						//		gid:'',//群ID
-						//		stuid:'',//资料id
-						//		stuname:'',//名称
-						//		stuimg:'',//头像,头像地址
-						//		mstype:''//资料类型,0家长,1管理员,2老师,3学生
-						//	}
 						if(data.RspCode == 0) {
 							mui.each(data.RspData, function(index, item) {
 								console.log('getMemData:' + JSON.stringify(item));
