--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -109,13 +109,13 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>所属群:</label>
-								<input id="stu_gname" type="text" class="mui-input-clear">
+								<input id="stu_gname" type="text" class="mui-input-clear" disabled="disabled">
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>简介:</label>
-								<input type="text" class="mui-input-clear">
+								<input type="text" class="mui-input-clear" disabled="disabled">
 							</div>
 						</li>
 					</div>
@@ -167,13 +167,13 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>账号:</label>
-								<input id="tea_utid" type="text" class="mui-input-clear"disabled="disabled">
+								<input id="tea_utid" type="text" class="mui-input-clear" disabled="disabled">
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>昵称:</label>
-								<input type="text" class="mui-input-clear"disabled="disabled">
+								<input type="text" class="mui-input-clear" disabled="disabled">
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
@@ -185,7 +185,7 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>所属群:</label>
-								<input id="tea_gname" type="text" class="mui-input-clear">
+								<input id="tea_gname" type="text" class="mui-input-clear" disabled="disabled">
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
@@ -215,7 +215,7 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>简介:</label>
-								<input id="tea_introduction" type="text" class="mui-input-clear">
+								<input id="tea_introduction" type="text" class="mui-input-clear" disabled="disabled">
 							</div>
 						</li>
 					</div>
@@ -280,26 +280,26 @@
 					document.getElementById("par_gname").value = data.gname;
 					document.getElementById("par_create").style.display = 'inline';
 				}
-//				var genderPicker = new mui.PopPicker();
-//				genderPicker.setData([{
-//					value: '男',
-//					text: '男'
-//				}, {
-//					value: '女',
-//					text: '女'
-//				}]);
-//
-//				//性别监听
-//				mui('.mui-content').on('tap', '.gender', function() {
-//					console.log('gender:' + this.getAttribute('id'));
-//					document.activeElement.blur(); //强制隐藏软键盘
-//					var id = this.getAttribute('id')
-//					genderPicker.show(function(items) {
-//						document.getElementById(id).innerText = items[0].value;
-//						//返回 false 可以阻止选择框的关闭
-//						//return false;
-//					});
-//				});
+				//				var genderPicker = new mui.PopPicker();
+				//				genderPicker.setData([{
+				//					value: '男',
+				//					text: '男'
+				//				}, {
+				//					value: '女',
+				//					text: '女'
+				//				}]);
+				//
+				//				//性别监听
+				//				mui('.mui-content').on('tap', '.gender', function() {
+				//					console.log('gender:' + this.getAttribute('id'));
+				//					document.activeElement.blur(); //强制隐藏软键盘
+				//					var id = this.getAttribute('id')
+				//					genderPicker.show(function(items) {
+				//						document.getElementById(id).innerText = items[0].value;
+				//						//返回 false 可以阻止选择框的关闭
+				//						//return false;
+				//					});
+				//				});
 
 				//完成按钮监听
 				document.getElementById('finish').addEventListener('tap', function() {
