--- a/JiaoBaoYun-hb/html/mine/qun_manage.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage.html
@@ -182,6 +182,9 @@
 					</div>
 				</div>
 			</div>
+			<div id="all_mem">
+
+			</div>
 			<!--<div id="bot_1002班" data-value="1002班" class="bot" style="display: none;">
 				<div class="mui-scroll-wrapper" style="background: white;top: 135px;">
 					<div class="mui-scroll">
@@ -233,13 +236,17 @@
 						console.log('index：' + index + '|' + 'item:' + item.gid);
 						if(item.gid == show) {
 							console.log('show：' + show + '|' + 'type:' + type);
-							events.openNewWindowWithData('qun_manage_invite.html', {
-								gid: show, //群ID
-								gname: item.gname, //群名
-								mstype: type, //被邀请成为的类型
-								vtp: item.mstype //邀请人的类型（用户管理角色,0家长,1管理员,2老师,3学生）
-							});
-							return false;
+							if(item.mstype == '1') {
+								events.openNewWindowWithData('qun_manage_invite.html', {
+									gid: show, //群ID
+									gname: item.gname, //群名
+									mstype: type, //被邀请成为的类型
+									vtp: item.mstype //邀请人的类型（用户管理角色,0家长,1管理员,2老师,3学生）
+								});
+								return false;
+							} else {
+								mui.toast('不是管理员，不能邀请');
+							}
 						}
 					});
 				});
@@ -275,77 +282,97 @@
 				});
 
 				//---获取群数据---start---
-				//9.获取用户群
-				//获取个人信息
-				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-				//需要参数
-				var getQunData = {
-					vtp: 'ag', //要获取的项:cg(创建的群),ug(参与群),mg(协管的群),ag(所有的群)
-					vvl: personalUTID, //查询的各项，对应人的utid，可以是查询的任何人
-				};
-				// 等待的对话框
-				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-				postDataPro_PostGList(getQunData, wd, function(data) {
-					console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-					if(data.RspCode == 0) {
-						//获取到数据
-						console.log('获取群数据成功');
-						document.getElementById("noqun").style.display = 'none';
-						document.getElementById("lineblue").style.display = 'inline';
-						document.body.querySelector('#slider').style.display = 'inline';
-						document.body.querySelector('#slider2').style.display = 'inline';
-						document.body.querySelector('#invite').style.display = 'inline';
-						//参数名	名称	参数类型	长度	是否加密	备注
-						//gid	群ID	int		否
-						//gname	群名	string		否	群名称
-						//gimg	群头像	string		否	群头像的链接
-						mui.each(data.RspData, function(index, item) {
-							//剔除同一个群身份不同
-							var same = false;
-							mui.each(qunList, function(index, qitem) {
-								if(qitem.gid == item.gid) {
-									same = true;
-									return false;
-								}
-							});
-							//不相同的群和身份
-							if(!same) {
-								console.log('data.RspData:群id:' + item.gid + '|群名：' + item.gname + '|管理角色：' + item.mstype + '|群头像：' + item.gimg);
-								var qun = {
-									gid: item.gid, //群ID
-									gname: item.gname, //群名
-									gimg: item.gimg, //群头像,群头像的链接
-									mstype: item.mstype //用户管理角色,0家长,1管理员,2老师,3学生
-								}
-								var hasGetMember = {
-									hasGetStu: false, //记录是否已获得学生
-									hasGetTea: false, //记录是否已获得老师
-									hasGetPar: false, //记录是否已获得家长
-									showBotId: '', //记录当前展示的成员区域id
-									showType: 'student', //记录当前展示的成员类型
-								};
-								mui.extend(qun, hasGetMember); //合并两个对象
-								qunList.push(qun);
-								addQun(qun);
-							}
-						});
-						//getMember(qunList[0], type); //获取群的正常用户
-					} else if(data.RspCode == 9) {
-						//未获取到数据
-						document.getElementById("noqun").style.display = 'inline';
-						document.getElementById("noqun").style.textAlign = "center";
-						document.getElementById("lineblue").style.display = 'none';
-						document.body.querySelector('#slider').style.display = 'none';
-						document.body.querySelector('#slider2').style.display = 'none';
-						document.body.querySelector('#invite').style.display = 'none';
-					} else {
-						mui.toast(data.RspTxt);
-					}
-					wd.close();
-				});
+				getAllQun();
 				//---获取群数据---end---
 
+				window.addEventListener('refresh', function() {
+					document.getElementById("qunlist").innerHTML = '\
+						<a id="controladd" class="mui-control-item" style="width: 40px;">\
+						</a>\
+						<div class="mui-icon mui-icon-plus addqun" style="position: absolute;border: 0px solid #ddd;font-size: 25px;color: #C7C7CC;right: 0px;top: 4px;"></div>';
+					document.getElementById("all_mem").innerHTML = '';
+					show = ''; //记录当前展示的群id
+					qunList = []; //记录所有群的信息
+					type = 'student'; //记录当前展示的成员身份类型
+					content = document.body.querySelector('.mui-content');
+					qunlist = document.getElementById("qunlist"); //群名称显示栏
+					controladd = document.getElementById("controladd"); //群名称显示栏添加群按钮前一个item
+					getAllQun();
+				});
 				//---方法---start---
+
+				/**
+				 * 获取所有的群
+				 */
+				function getAllQun() {
+					//9.获取用户群
+					//获取个人信息
+					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+					//需要参数
+					var getQunData = {
+						vtp: 'ag', //要获取的项:cg(创建的群),ug(参与群),mg(协管的群),ag(所有的群)
+						vvl: personalUTID, //查询的各项，对应人的utid，可以是查询的任何人
+					};
+					// 等待的对话框
+					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					postDataPro_PostGList(getQunData, wd, function(data) {
+						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						if(data.RspCode == 0) {
+							//获取到数据
+							console.log('获取群数据成功');
+							document.getElementById("noqun").style.display = 'none';
+							document.getElementById("lineblue").style.display = 'inline';
+							document.body.querySelector('#slider').style.display = 'inline';
+							document.body.querySelector('#slider2').style.display = 'inline';
+							document.body.querySelector('#invite').style.display = 'inline';
+							//参数名	名称	参数类型	长度	是否加密	备注
+							//gid	群ID	int		否
+							//gname	群名	string		否	群名称
+							//gimg	群头像	string		否	群头像的链接
+							mui.each(data.RspData, function(index, item) {
+								//剔除同一个群身份不同
+								var same = false;
+								mui.each(qunList, function(index, qitem) {
+									if(qitem.gid == item.gid) {
+										same = true;
+										return false;
+									}
+								});
+								//不相同的群和身份
+								if(!same) {
+									console.log('data.RspData:群id:' + item.gid + '|群名：' + item.gname + '|管理角色：' + item.mstype + '|群头像：' + item.gimg);
+									var qun = {
+										gid: item.gid, //群ID
+										gname: item.gname, //群名
+										gimg: item.gimg, //群头像,群头像的链接
+										mstype: item.mstype //用户管理角色,0家长,1管理员,2老师,3学生
+									}
+									var hasGetMember = {
+										hasGetStu: false, //记录是否已获得学生
+										hasGetTea: false, //记录是否已获得老师
+										hasGetPar: false, //记录是否已获得家长
+										showBotId: '', //记录当前展示的成员区域id
+										showType: 'student', //记录当前展示的成员类型
+									};
+									mui.extend(qun, hasGetMember); //合并两个对象
+									qunList.push(qun);
+									addQun(qun);
+								}
+							});
+						} else if(data.RspCode == 9) {
+							//未获取到数据
+							document.getElementById("noqun").style.display = 'inline';
+							document.getElementById("noqun").style.textAlign = "center";
+							document.getElementById("lineblue").style.display = 'none';
+							document.body.querySelector('#slider').style.display = 'none';
+							document.body.querySelector('#slider2').style.display = 'none';
+							document.body.querySelector('#invite').style.display = 'none';
+						} else {
+							mui.toast(data.RspTxt);
+						}
+						wd.close();
+					});
+				}
 
 				/**
 				 * 群栏添加一个群
@@ -396,7 +423,8 @@
 											</ul>\
 										</div>\
 									</div>';
-					document.body.querySelector('.mui-content').appendChild(div);
+					document.getElementById("all_mem").appendChild(div);
+					//document.body.querySelector('.mui-content').appendChild(div);
 					getMember(qun, memberType);
 				}
 
@@ -436,20 +464,16 @@
 					// 等待的对话框
 					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 					postDataPro_PostGusers(getMemData, wd, function(data) {
-						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-						//参数名	名称	参数类型	长度	是否加密	备注
-						//gid	群ID	int
-						//utid	用户tid	int
-						//ugname	用户在群昵称	string			用户在群里的备注名称
-						//ugnick	用户昵称	string			用户资料昵称
-						//uimg	用户头像	string			用户头像
-						//ugtp	用户在群类型	int			0家长,1管理员,2老师,3学生
+						console.log('13_postDataPro_PostGusers_通过群ID获取群的正常用户.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
+							var strUtid = '';
 							mui.each(data.RspData, function(index, item) {
 								console.log('getMemData:' + JSON.stringify(item));
 								var qunBot = document.getElementById("bot_" + type2 + '_' + qun.gid).querySelector('.mui-row');
 								addMember(qunBot, item);
+								strUtid = strUtid + item.utid;
 							});
+
 						} else if(data.RspCode == 9) {
 							//查询为空
 							var qunBot = document.getElementById("bot_" + type2 + '_' + qun.gid).querySelector('.mui-row');
@@ -473,10 +497,37 @@
 										item.hasGetPar = true; //查询了家长
 										break;
 								}
-								return;
+								return false;
 							}
 						});
 						wd.close();
+					});
+				}
+
+				function getBeiZhu() {
+					//获取备注
+					//35.个人获取对某人或一群人的备注
+					//所需参数
+					var comData = {
+						vvl: strUtid //被备注用户ID,utid或utid串
+					};
+					//返回值
+					// 等待的对话框
+					var wd2 = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					postDataPro_PostUmk(comData, wd2, function(data) {
+						console.log('35_postDataPro_PostUmk_个人获取对某人或一群人的备注.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						if(data.RspCode == 0) {
+							mui.each(data.RspData, function(index, item) {
+								if(item.bunick != '' && item.bunick != null) {
+									document.getElementById("")
+								}
+							});
+						} else {
+							if(data.RspCode != 9) {
+								mui.toast(data.RspTxt);
+							}
+						}
+						wd2.close();
 					});
 				}
 
@@ -487,17 +538,17 @@
 				 */
 				function addMember(qunBot, member) {
 					var li = document.createElement('li');
-					var memId = 'member_' + member.utid; //
+					var memId = 'member_' + member.gid + '_' + member.mstype + '_' + member.utid; //
 					li.id = memId;
 					li.setAttribute('data-utid', member.utid);
-					li.setAttribute('data-ugnick', member.ugnick);
 					li.className = 'mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3';
 					//删除按钮
 					var html1 = '<div class="mui-icon iconfont icon-close" data-utid="' + member.utid + '" data-gid="' + member.gid + '" style="display: none;"></div>';
 					//成员,
-					var html2 = '<div class="keep-box-shadow-border keep-member" data-utid="' + member.utid + '" data-gid="' + member.gid + '" data-ugnick="' + member.ugnick + '">';
+					var html2 = '<div class="keep-box-shadow-border keep-member" data-utid="' + member.utid + '" data-gid="' + member.gid + '">';
 					//头像
 					var html3 = '';
+
 					if(member.uimg != null) {
 						var myDate = new Date();
 						html3 = '<img src="' + member.uimg + '?' + myDate.getTime() + '" />';
@@ -506,11 +557,12 @@
 					}
 					//名称
 					var html4 = '';
-					//if(member.ugname == null) { //没有群昵称
-					//html4 = '<p class="mui-ellipsis">' + member.ugnick + '</p></div>';
-					//} else {
-					html4 = '<p class="mui-ellipsis">' + member.ugname + '</p></div>';
-					//}
+					if(member.ugname == null || member.ugname == '') { //没有群昵称
+						//使用用户昵称
+						html4 = '<p id="member_name_' + member.utid + '" class="mui-ellipsis">' + member.ugnick + '</p></div>';
+					} else {
+						html4 = '<p id="member_name_' + member.utid + '" class="mui-ellipsis">' + member.ugname + '</p></div>';
+					}
 
 					li.innerHTML = html1 + html2 + html3 + html4;
 					qunBot.appendChild(li);
@@ -540,8 +592,7 @@
 								item.showBotId = 'bot_student_' + qunId;
 								item.showType = 'student';
 							}
-
-							return;
+							return false;
 						}
 					});
 
@@ -587,11 +638,12 @@
 								item.showBotId = 'bot_' + type2 + "_" + show;
 								item.showType = type2;
 								type = type2;
-								return;
+								return false;
 							}
 						});
 					}
 				}
+
 			})
 		</script>
 	</body>
