0003796: ”我的空间“链接没有实现

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -124,7 +124,7 @@
 							break;
 							//我的空间
 						case 4:
-						events.openNewWindowWithData('quan/zone_main.html',personalUTID);
+						events.openNewWindowWithData('/html/quan/zone_main.html',personalUTID);
 							break;
 							//积分
 						case 5:
