--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -104,7 +104,7 @@
 
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 					console.log('click position:' + this.getAttribute('position'))
-					closeMenu();
+//				
 					switch(parseInt(this.getAttribute('position'))) {
 						//群资料
 						case 0:
@@ -141,7 +141,9 @@
 						default:
 							break;
 					}
-
+					setTimeout(function(){
+						closeMenu()
+					},1500);
 				});
 			})
 			window.addEventListener('infoChanged', function() {
