老师发布作业、老师作业主界面接口数据完成

--- a/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
@@ -29,7 +29,7 @@
 
 			    </div>
 			</div>
-			<img src="../../image/homework/other.png" />
+			<img id="tempDetail" src="../../image/homework/other.png" />
 	    </div>
 		<!--下拉刷新容器-->
 		<!--<div id="refreshContainer" class="mui-scroll-wrapper">-->
@@ -44,6 +44,7 @@
 		<a id="iconPublish" class="mui-icon iconfont icon-jia" ></a>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicHomeworkProtocol.js"></script>
 		<!--h5下拉刷新-->
 		<script src="../../js/utils/h5fresh.js"></script>
