--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -56,7 +56,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="mui-table-view-cell mui-media open-newPage" pos='1'>
+					<!--<li class="mui-table-view-cell mui-media open-newPage" pos='1'>
 						<a href="javascript:;">
 							<p class="mui-pull-right" id='email'>暂无</p>
 							<div class="mui-media-body">
@@ -64,7 +64,7 @@
 
 							</div>
 						</a>
-					</li>
+					</li>-->
 					<li class="mui-table-view-cell mui-media open-newPage" pos='2'>
 						<a href="javascript:;">
 							<p class='mui-pull-right' id="txt">暂无</p>
