--- a/JiaoBaoYun-hb/html/quan/leave-reply.html
+++ b/JiaoBaoYun-hb/html/quan/leave-reply.html
@@ -48,6 +48,8 @@
 					if(data.RspCode == 0) {
 						mui.toast('成功')
 						leaveContent.value = '';
+						events.fireToPageNone('leave-sub.html','refreshLeaveList');
+						mui.back();
 					} else {
 						mui.toast(data.RspTxt);
 					}
